# selection-sort-visualizer-python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  selection_sort.py  streamlit_app.py  test_selection_sort.py  visual_selection_sort.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  python-ci.yml
src/selection_sort_visualizer/: __init__.py  parser.py  sorting.py
tests/: test_sorting.py  test_streamlit_app.py
