[project]
name = "selection-sort-visualizer-python"
version = "0.1.0"
description = "Interactive Python visualizer for the selection sort algorithm."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nikita Krivoshei" }]
license = "MIT"
dependencies = []

[project.optional-dependencies]
app = [
  "streamlit>=1.57,<2",
  "plotly>=5.23,<6",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []
